k8s/netes/overlays/backstage/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backstage
spec:
  parentRefs:
  - name: internal-gateway
    namespace: kube-system
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - backstage.maximillian.se
  rules:
  - backendRefs:
    - kind: Service
      group: ''
      name: backstage
      port: 7007
      weight: 1
    matches:	
      - path:	
          type: PathPrefix	
          value: /
